[gd_scene load_steps=9 format=3 uid="uid://drl0elvrqhdoa"]

[ext_resource type="Script" path="res://Main/Data/Script/Customer/Npc.gd" id="1_5bhep"]
[ext_resource type="Texture2D" uid="uid://th8y4cjy1nr1" path="res://Asset/Npc/npc4.png" id="2_10268"]
[ext_resource type="Script" path="res://StateMachine/StateMachine.gd" id="3_5ettv"]
[ext_resource type="Script" path="res://Main/Data/Script/Customer/NpcIdle.gd" id="3_s46ix"]
[ext_resource type="Script" path="res://Main/Data/Script/Customer/NpcWalking.gd" id="4_057mh"]
[ext_resource type="Script" path="res://Main/Data/Script/Customer/NpcSearching.gd" id="5_3bmm0"]
[ext_resource type="Script" path="res://Main/Data/Script/Customer/NpcBuying.gd" id="6_ut8hy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kahc5"]
radius = 5.0
height = 18.0

[node name="NPC" type="CharacterBody2D" node_paths=PackedStringArray("state_machine")]
collision_layer = 8
collision_mask = 96
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 1.0
script = ExtResource("1_5bhep")
state_machine = NodePath("StateMachine")

[node name="Skin" type="Sprite2D" parent="."]
texture = ExtResource("2_10268")
offset = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kahc5")

[node name="ShoppingTimer" type="Timer" parent="."]

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_5ettv")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("customer", "navigation_agent")]
script = ExtResource("3_s46ix")
customer = NodePath("../..")
navigation_agent = NodePath("../NavigationAgent")

[node name="Walking" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("customer", "navigation_agent")]
script = ExtResource("4_057mh")
customer = NodePath("../..")
navigation_agent = NodePath("../NavigationAgent")

[node name="Searching" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("customer", "navigation_agent")]
script = ExtResource("5_3bmm0")
customer = NodePath("../..")
navigation_agent = NodePath("../NavigationAgent")

[node name="ThinkTimer" type="Timer" parent="StateMachine/Searching"]
one_shot = true

[node name="InteractTimer" type="Timer" parent="StateMachine/Searching"]

[node name="Buying" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("customer", "navigation_agent")]
script = ExtResource("6_ut8hy")
customer = NodePath("../..")
navigation_agent = NodePath("../NavigationAgent")

[node name="WaitTimer" type="Timer" parent="StateMachine/Buying"]
wait_time = 0.5

[node name="MakePathTimer" type="Timer" parent="StateMachine"]

[node name="NavigationAgent" type="NavigationAgent2D" parent="StateMachine"]
path_desired_distance = 32.0
target_desired_distance = 16.0
navigation_layers = 9
path_postprocessing = 1
max_neighbors = 5
debug_enabled = true

[connection signal="timeout" from="StateMachine/Searching/ThinkTimer" to="StateMachine/Searching" method="_on_wait_timer_timeout"]
[connection signal="timeout" from="StateMachine/Searching/InteractTimer" to="StateMachine/Searching" method="_on_interaction_timer_timeout"]
[connection signal="timeout" from="StateMachine/Buying/WaitTimer" to="StateMachine/Buying" method="_on_wait_timer_timeout"]
